[package]
name = "conceptual-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacon = "2.12.1"


[features]
day_001 = []
day_002 = []
day_003 = []
day_003_1 = []
day_004 = []

task30 = []
task31 = []
task32 = []
task33 = []
task35 = []
task36 = []
task37 = []

task40 = []
task41 = []
task42 = []
task43 = []
task44 = []
task45 = []
task46 = []
task47 = []
task48 = []
task49 = []

task50 = []

